--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "floating-vue": "^5.2.2",
+    "h3": "^1.14.0",
+    "jsdom": "^26.0.0",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-final-modal": "^3.4.11",
